<resources>
    <string name="app_name" translatable="false">MobilCar</string>
    <string name="title_activity_person_info_main_page" translatable="false">PersonInfoMainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_settings222" translatable="false">SettingsActivity222</string>

    <string name="signin">Sign in</string>
    <string name="usernameLog">Username</string>
    <string name="emailLog">Email</string>
    <string name="passwordLog">Password</string>
    <string name="loginbtn">LOGIN</string>
    <string name="registerbtn">REGISTER INSTEAD</string>
    <string name="forgotpass">Forgot Password?</string>

    <string name="namePerson">First Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="nextbtn">NEXT</string>

    <string name="carDiary">Welcome to your car collection</string>
    <string name="addCarsbtn">Add Car</string>

    <string name="phoneLogged">Phone</string>
    <string name="locationLogged">Location</string>

    <string name="addYourCar">ADD YOUR CAR</string>
    <string name="collectionOfCars">Collection of cars</string>
    <string name="brand">Brand</string>
    <string name="brandCar">Type brand</string>
    <string name="model">Model</string>
    <string name="modelCar">Type model</string>
    <string name="gasExpense">Gas expense</string>
    <string name="gasExpenseCar">Type average gas expense</string>
    <string name="horsePower">Horse Power</string>
    <string name="horsePowerCar">Type horse power</string>
    <string name="toDocsbtn">To Documents</string>

    <string name="addLiability">Liability Insurance</string>
    <string name="addTech">Tech Review</string>
    <string name="editStartDate">Start Date </string>
    <string name="editEndDate">End Date </string>
    <string name="editPrice">Add Price </string>
    <string name="confirmDocbtn">Confirm Document </string>

    <string name="changeLang">Change Language</string>
    <string name="finishbtn">Finish</string>
    <string name="delete">Delete</string>
    <string name="carStats">Car Statistics</string>
    <string name="Settings">Settings</string>
    <string name="save">Save</string>
    <string name="liabtn">Liab</string>
    <string name="techbtn">Tech</string>

    <string name="logout">Logout</string>
</resources>