<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".TechReviewActivity">

    <TextView
        android:id="@+id/add_Tech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/addTech"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_Tech"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_drive_file_rename_outline_40"
        android:drawablePadding="20dp"
        android:hint="@string/usernameLog"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/editStartDate"
        android:inputType="date"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editStartDate"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/editEndDate"
        android:inputType="date"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addTechPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEndDate"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/editPrice"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_techreview_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTechPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:enabled="false"
        android:text="@string/confirmDocbtn" />


</RelativeLayout>