<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonInfoMainPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBack"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/firstlayer"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300px"
                android:layout_height="300px"
                android:layout_marginTop="50px"
                android:layout_marginBottom="50px"
                android:src="@drawable/carinfo" />

            <TextView
                android:id="@+id/nameLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitle"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cityOfLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5px"
                android:layout_marginBottom="50px"
                android:textColor="@color/colorTitle"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120px"
            android:orientation="vertical"
            android:paddingTop="100px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameLog"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usernameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSubTitle"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="20px"
            android:layout_marginRight="20px"
            android:layout_marginBottom="10px"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLog"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSubTitle"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="20px"
            android:layout_marginRight="20px"
            android:layout_marginBottom="10px"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationLogged"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationUserLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mladost, str. Vazov"
                android:textColor="@color/colorSubTitle"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="20px"
            android:layout_marginRight="20px"
            android:layout_marginBottom="10px"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120px"
            android:orientation="vertical">

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>